--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav>
         <table>
           <tr class="table">
-            <td class="end-nav"><a href="file:///Users/Haven/Library/Mobile%20Documents/com~apple~TextEdit/Documents/Project2.1.5.html">Privacy Policy</a></td>
+            <td class="end-nav"><a href="https://www.google.com/?client=safari&channel=iphone_bm">Privacy Policy</a></td>
             <td class="end-nav">Cookies</td>
             <td class="end-nav">Terms and Conditions</td>
             <td class="end-nav">Legal</td>
