Link style.css to idex.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Project_IronLords</title>
-        <link href="file:///Users/havenmiddleton-horner/Desktop/Code/style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
     </head>
     <header>
         <h1>The Complete History and Interactions in Destiny 2</h1>
